# yokhal

./: .gitignore  README.md  pyproject.toml  test.py  train.py  train_sft_qlora.py
hannam/: __init__.py  dataset.py
hannam-2b/runs/Feb28_16-29-55_workspace-kzxdq1mc9hoa-0/: events.out.tfevents.1709137805.workspace-kzxdq1mc9hoa-0.743510.0
jisic/: __init__.py
task/: chat.json  train.json
yokhal/: __init__.py  adapt.py  dataset.py  perplexity.py
