[project]
dependencies = [
  "transformers==4.48.0",
  "datasets>=2.16.1",
  "accelerate>=0.26.1",
  "evaluate>=0.4.1",
  "bitsandbytes>=0.42.0",
  "peft>=0.9.0",
  "trl>=0.7.11",
  "torch>=2.1.2",
  "fire>=0.5.0",
]
description = "Yokhal Korean Chatbot"
name = "yokhal"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = [
  "pip>=23.3.2",
  "setuptools>=69.0.3",
  "tensorboard>=2.14.0",
  "wandb>=0.16.3",
]
managed = true

[tool.ruff.lint]
ignore = ['E701']

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
indent-width = 2
line-length = 125
